--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Dashboard del Clima</title>
     <meta name="description" content="Dashboard del Clima con PWA">
-    <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="./favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="./favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
     <meta name="theme-color" content="#D3D1D1">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
+    <!-- PWA Test Script - Remove in production -->
+    <script type="module" src="./test-pwa.js"></script>
   </body>
 </html>
